sort.basic.comb.AlgCombSort.scala.error
Erreur de compilation :
AlgCombSort:3: error: not found: type int
  var ecart:int = getNombreValeurs -1
            ^